[package]
name = "rusty_pass"
version = "0.1.0"
authors = ["Miroslav Svitok <mirosvitok@gmail.com>"]
build = "build.rs"

[dependencies]
serde = "*"
serde_json = "*"
serde_macros = "*"
getopts = "0.2"
libc = "0.1.10"
rand = "0.3.11"
rust-crypto = "*"
rustc-serialize = "0.3"


[build-dependencies]
gcc = "0.3"
